[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cubes/CubeSet.tscn" type="PackedScene" id=1]
[ext_resource path="res://CubeBattle/Character.gd" type="Script" id=2]
[ext_resource path="res://CubeBattle/Assets/Placeholder.png" type="Texture" id=3]

[node name="Character" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Body" type="Sprite" parent="."]
position = Vector2( 37.815, 49.0931 )
scale = Vector2( 0.243728, 0.243728 )
texture = ExtResource( 3 )
centered = false

[node name="CubeSet" parent="." instance=ExtResource( 1 )]
position = Vector2( 94.1434, 212.495 )

[node name="Stats" type="Node2D" parent="."]
position = Vector2( 19.0193, 13.6549 )

[node name="LabelHP" type="Label" parent="Stats"]
margin_left = 5.85209
margin_top = 14.1426
margin_right = 76.8521
margin_bottom = 28.1426
text = "Hit points: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="Stats"]
margin_left = 5.36442
margin_top = -3.41372
margin_right = 141.364
margin_bottom = 10.5863
text = "NAME_PLACEHOLDER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Node2D" parent="Stats"]
